src/objects/Application__c.object
<CustomObject>
    <fields>
        <fullName>Accept__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I Accept</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <label>Application Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Types__c</fullName>
        <label>Application Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Trade_Service_Pro</fullName>
                    <label>Trade Service Pro</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Application_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Application Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Participating_Programs__c</fullName>
        <label>Participating Programs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Print_Name__c</fullName>
        <label>Print Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>States__c</fullName>
        <label>States</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TC_Accepted_Agreed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I accept the terms and conditions.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TC_Authorized_Company_Name__c</fullName>
        <label>Authorized Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TC_Authorized_Rep__c</fullName>
        <label>Authorized Rep</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TC_Authorized_Title__c</fullName>
        <label>Authorized Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TC_Terms_Conditions__c</fullName>
        <label>TC Terms Conditions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Terms_And_Conditions_Text__c</fullName>
        <label>Terms And Conditions Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Terms_And_Conditions__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Terms And Conditions</label>
        <referenceTo>Terms_and_Conditions__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trade_Ally_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trade Ally Reference</label>
        <referenceTo>Trade_Ally_Reference__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trade_Ally_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trade Ally User</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trade_Ally__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Trade Ally</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Trade_Ally__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Application_Status__c</columns>
        <columns>Trade_Ally_User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>